--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,7 +9,7 @@ body {
     
     background-image: url('../images/backgroundimage.jpg');
     background-size: auto;
-    background-position: center 13%;
+    background-position: center 20%;
     background-repeat: no-repeat;
 
     .container {
@@ -19,8 +19,28 @@ body {
         padding: 0 20px;
 
         &__content {
-            
-            
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            padding-top: 42vh;
+            flex-direction: column;
+
+            &__title {
+                color: #000;
+                font-size: 3rem;
+                font-weight: 700;
+                margin-bottom: 20px;
+
+            }
+
+            &__count {
+                font-size: 3rem;
+                font-weight: 700;
+                color: rgb(24, 245, 24);
+                background-color: rgba($color: #000000  , $alpha: 0.5);
+                border-radius: 10px;
+
+            }
         }
     }
 }
